[gd_scene load_steps=3 format=3 uid="uid://c662wnpfv5uqs"]

[ext_resource type="Script" path="res://scenes/spot.gd" id="1_g1nkr"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_a6lly"]

[node name="Spot" type="Area2D"]
script = ExtResource("1_g1nkr")

[node name="RectSpot" type="ColorRect" parent="."]
offset_right = 32.0
offset_bottom = 32.0
color = Color(0, 1, 0.0156863, 1)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(16, 16)
scale = Vector2(1.4, 1.4)
shape = SubResource("RectangleShape2D_a6lly")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
